Added new features