@@ -2,11 +2,11 @@
 
 ## Kompilierung und Ausführung des Programmes
 
-Dieses Programm generiert eine vom Benutzer festgelegte Anzahl an zufälligen Nukleotid- oder Peptidsequenzen, welche eine zufällige Länge zwischen einem ebenfalls vom Benutzer festgelegten Minimal- und Maximalwert besitzen. Zusätzlich werden für Nukleotidsequenzen der GC-Gehalt, das Molekulargewicht sowie die Schmelztemperatur berechnet. Die Generierung bzw. Berechnung der Sequenzen wird auf mehrere Kerne ausgelagert. Die Sequenzen werden standardmäßig auf der Konsole ausgegeben, können aber auch in einer Datei im Fasta-Format gespeichert werden. Das Programm ist außerdem in der Lage, genomische Fasta-Dateien einzulesen, ggf. zu modifizieren und auszugeben bzw. modifiziert zu speichern. Die Benutzung bzw. Ausführung des Programmes kann sowohl über die Kommandozeile als auch über ein GUI erfolgen (wird demnächst hinzugefügt). Zur Ausführung des Programmes muss das Paket *fastagen* zunächst mit dem Befehl
+Dieses Programm generiert eine vom Benutzer festgelegte Anzahl an zufälligen Nukleotid- oder Peptidsequenzen, welche eine zufällige Länge zwischen einem ebenfalls vom Benutzer festgelegten Minimal- und Maximalwert besitzen. Zusätzlich werden für Nukleotidsequenzen der GC-Gehalt, das Molekulargewicht sowie die Schmelztemperatur berechnet. Die Generierung bzw. Berechnung der Sequenzen wird auf mehrere Kerne ausgelagert. Die Sequenzen werden standardmäßig auf der Konsole ausgegeben, können aber auch in einer Datei im Fasta-Format gespeichert werden. Das Programm ist außerdem in der Lage, genomische Fasta-Dateien einzulesen, sequenzspezifische Kennzahlen wie z.B. den GC-Gehalt oder das Molekulargewicht zu berechnen und diese auszugeben bzw. modifiziert zu speichern. Die Benutzung bzw. Ausführung des Programmes kann sowohl über die Kommandozeile (CLI) als auch über eine graphische Benutzeroberfläche (GUI) erfolgen. Zur Ausführung des Programmes muss das Paket *fastagen* zunächst mit dem Befehl
 ```
 javac -d /path/to/bin/ -cp /path/to/junit.jar --module-path path/to/javafx/lib --add-modules javafx.controls,javafx.fxml fastagen/*.java && cp *.fxml path/to/bin/fastagen/
 ```
-kompiliert werden. Der Zusatz "-cp /path/to/junit.jar" ist nötig, da ein Teil des Programmes mittels des JUnit Framework in einem Unit-Test getestet wird (falls gewünscht). Es wird also neben einer aktuellen Version des [JDK](https://www.oracle.com/java/technologies/downloads/) auch das JUnit Framework in Form einer [.jar-Datei](https://search.maven.org/remotecontent?filepath=junit/junit/4.13.2/junit-4.13.2.jar) sowie [Hamcrest-core](https://search.maven.org/remotecontent?filepath=org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar) zur Durchführung des Unit-Tests benötigt. Wird dies nicht gewünscht kann die entsprechende Testklasse *SequenceTest.java* einfach nicht mitkompiliert werden. Zudem wird die [JavaFX-Library](https://gluonhq.com/products/javafx/) für die Ausführung im GUI-Modus benötigt. Im Anschluss kann die Main-Klasse über den Befehl
+kompiliert werden. Der Zusatz "-cp /path/to/junit.jar" ist nötig, da ein Teil des Programmes mittels des JUnit Framework in einem Unit-Test getestet wird (falls gewünscht). Es wird also neben einer aktuellen Version des [JDK](https://www.oracle.com/java/technologies/downloads/) auch das JUnit Framework in Form einer [.jar-Datei](https://search.maven.org/remotecontent?filepath=junit/junit/4.13.2/junit-4.13.2.jar) sowie [Hamcrest-core](https://search.maven.org/remotecontent?filepath=org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar) zur Durchführung des Unit-Tests benötigt. Wird dies nicht gewünscht kann die entsprechende Testklasse *SequenceTest.java* einfach nicht mitkompiliert werden. Zudem wird die [JavaFX-Library](https://gluonhq.com/products/javafx/) für die Ausführung im GUI-Modus benötigt. Im Anschluss kann das Programm im CLI-Modus über den Befehl
 ```
 java -cp /path/to/bin/ -module-path path/to/javafx/lib/ --add-modules javafx.controls,javafx.fxml fastagen.Main (read|generate) (Protein|Genome) [Options]
 ```
@@ -14,11 +14,16 @@ ausgeführt werden. Der Unit-Test kann ebenfalls (separat) über die Kommandozei
 ```
 java -cp /path/to/bin/:/path/to/junit.jar:/path/to/hamcrest-core.jar org.junit.runner.JUnitCore fastagen.SequenceTest
 ```
-durchgeführt werden.
+durchgeführt werden. Zur Ausführung des Programmes im GUI-Modus muss das Programm mit dem Befehl
+```
+java -cp /path/to/bin/ -module-path path/to/javafx/lib/ --add-modules javafx.controls,javafx.fxml fastagen.Main GUI
+```
+gestartet werden.
 
-## Parameter und Optionen
 
-Bei der Ausführung des Programmes können vom Benutzer die folgenden Parameter bzw. Optionen übergeben werden:
+## Parameter und Optionen (CLI)
+
+Bei der Ausführung des Programmes über die Kommandozeile können vom Benutzer die folgenden Parameter bzw. Optionen übergeben werden:
 
 ### Pflichtparameter
 
@@ -31,10 +36,11 @@ Bei der Ausführung des Programmes können vom Benutzer die folgenden Parameter 
 
 * *-e, --entries \<total_entries\>* : Die Anzahl der zu generierenden Einträge bzw. Sequenzen (default: 1)
 * *-l, --length \<min_length..max_length\>* : Die minimale und maximale Länge der zufällig generierten Sequenzen (beides inklusive, Format: *zahl1..zahl2*, default: 20..30)
-* *-t, --threads < threads>* : Die Anzahl der zu verwendenen Threads/Kerne für die Sequenzgenerierung (Default: 3/4 der verfügbaren Kerne)
+* *-t, --threads \<threads\>* : Die Anzahl der zu verwendenen Threads/Kerne für die Sequenzgenerierung (Default: 3/4 der verfügbaren Kerne)
 * *-o, --out \<file_name\>* : Der Pfad bzw. Name der Datei, in welcher die erzeugten Einträge gespeichert werden sollen (default: Ausgabe auf der Konsole)
 * *-q, --quiet* : Wird dieser Parameter mitgegeben, so werden keinerlei Runtime Informationen auf der Konsole ausgegeben
 * *--write-properties* : Wird dieser Parameter mitgegeben, so werden neben den Sequenzen auch die Nukleotidsequenz-Eigenschaften (z.B. GC-Gehalt) als Kommentarzeilen in die Fasta-Ausgabedatei geschrieben
+* *--header \<header_prefix\>* : Präfix für den Header jeder generierten Sequenz in der Fasta-Datei
 
 #### *read*-Modus:
 
